🚀 Added Interview Analysis system with auto registration, identity check, and engagement monitoring

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,11 @@
     <!-- ✅ Header -->
     <header class="site-header">
         <div class="container header-content">
+        <!--           
             <a href="index.html" class="logo">
                 <img src="https://via.placeholder.com/150x50/0A0A0A/FFFFFF?text=AEGIS+LOGO" alt="Aegis Logo">
-            </a>
+            </a> 
+        -->
             <nav class="main-nav">
                 <ul>
                     <li><a href="about.html">About</a></li>
@@ -28,12 +30,16 @@
                     <li><a href="#xai-section">XAI</a></li> <!-- ✅ Link scrolls to XAI section -->
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="register.html">Interview</a></li>
+
+
+
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- ✅ Main Content -->
+    <!-- ✅ Main Content -->0
     <main class="main-content">
         <!-- Hero Section -->
         <section class="hero-section homepage-hero">
@@ -96,7 +102,7 @@
         <!-- ✅ Evaluation Results Section -->
         <section id="evaluation-section" class="evaluation-section">
             <div class="container evaluation-container">
-                <h2>Model Evaluation Results</h2>
+                <h2>DASHBOARD</h2>
                 <p>Fairness and robustness metrics from federated training:</p>
 
                 <div class="chart-box">
