Fixed frontend (interview.html + interview.js) — live charts and FER integration working

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,108 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About The Aegis Project</title>
-    <link rel="stylesheet" href="homepage.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About — Facial Recognition Interview System</title>
+
+  <!-- 🌌 Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <style>
+    /* 🌌 Global Theme */
+    body {
+      background: linear-gradient(to bottom, #010a13, #000);
+      color: #dfefff;
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      scroll-behavior: smooth;
+    }
+
+    /* 🌐 Navbar */
+    .site-header {
+      background: rgba(0, 0, 0, 0.9);
+      border-bottom: 1px solid rgba(0, 191, 255, 0.2);
+      box-shadow: 0 0 12px rgba(0, 191, 255, 0.2);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .main-nav ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 35px;
+      list-style: none;
+      padding: 15px 0;
+      margin: 0;
+    }
+
+    .main-nav a {
+      color: #00bfff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: all 0.3s ease;
+      position: relative;
+      letter-spacing: 0.5px;
+    }
+
+    .main-nav a:hover,
+    .main-nav a.active {
+      color: #b8dfff;
+      text-shadow: 0 0 10px rgba(0, 191, 255, 0.8);
+    }
+
+    .main-nav a::after {
+      content: "";
+      position: absolute;
+      bottom: -4px;
+      left: 50%;
+      width: 0;
+      height: 2px;
+      background: #00bfff;
+      transform: translateX(-50%);
+      transition: all 0.3s ease;
+      box-shadow: 0 0 10px rgba(0, 191, 255, 0.6);
+    }
+
+    .main-nav a:hover::after {
+      width: 60%;
+    }
+
+    /* ✨ Section Titles */
+    h1, h2 {
+      font-family: 'Outfit', sans-serif;
+      color: #00bfff;
+      text-transform: uppercase;
+      text-shadow: 0 0 12px rgba(0, 191, 255, 0.7);
+      letter-spacing: 1px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #b8dfff;
+      font-size: 1.05em;
+      line-height: 1.7em;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    /* 🧠 Hero Section */
+    .hero-section {
+      text-align: center;
+      padding: 120px 20px 60px;
+      background: radial-gradient(circle at top, #02131f, #000);
+    }
+
+    .hero-section h1 {
+      font-size: 2.4em;
+      margin-bottom: 15px;
+    }
+
+    /* 📘 About & Mission Section */
+    section {
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    .about-section h2 {
+      margin-top: 60px;
+    }
+
+    /* 👨‍💻 Team Section */
+    .team-section {
+      padding: 80px 20px 100px;
+      text-align: center;
+    }
+
+    .team-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 40px;
+    }
+
+    .team-member {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(0, 191, 255, 0.2);
+      border-radius: 12px;
+      padding: 25px;
+      width: 250px;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(0, 191, 255, 0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .team-member:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 20px rgba(0, 191, 255, 0.4);
+    }
+
+    .team-member h3 {
+      font-size: 1.2em;
+      color: #00bfff;
+      margin-bottom: 8px;
+    }
+
+    .team-member p {
+      font-size: 0.95em;
+      color: #b8dfff;
+      margin-bottom: 15px;
+    }
+
+    .social-links a {
+      color: #9ad0ff;
+      font-size: 1.2em;
+      margin: 0 8px;
+      transition: color 0.3s ease, transform 0.2s ease;
+    }
+
+    .social-links a:hover {
+      color: #00bfff;
+      transform: scale(1.15);
+    }
+
+    /* 🦶 Footer */
+    footer {
+      background: #000;
+      border-top: 1px solid rgba(0,191,255,0.2);
+      text-align: center;
+      padding: 25px;
+      color: #00bfff;
+      font-size: 0.95em;
+    }
+
+    footer a {
+      color: #00bfff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    footer a:hover {
+      text-shadow: 0 0 10px rgba(0,191,255,0.8);
+    }
+  </style>
 </head>
+
 <body id="top">
-    <header class="site-header">
-        <div class="container header-content">
-            <a href="index.html" class="logo">
-                <img src="https://via.placeholder.com/150x50/0A0A0A/FFFFFF?text=AEGIS+LOGO" alt="Aegis Logo">
-            </a>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="#top">About</a></li> <!-- Link to top of current page -->
-                    <li><a href="index.html#how-it-works">How It Works</a></li>
-                    <li><a href="index.html#research">Research</a></li>
-                    <li><a href="index.html#demo">Demo</a></li>
-                    <li><a href="index.html#blog">Blog</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
-                </ul>
-            </nav>
+  <!-- ✅ Header -->
+  <header class="site-header">
+    <nav class="main-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="index.html#research">Research</a></li>
+        <li><a href="index.html#demo-section">Demo</a></li>
+        <li><a href="index.html#xai-section">XAI</a></li>
+        <li><a href="index.html#blog">Blog</a></li>
+        <li><a href="register.html">Interview</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- 🧠 Hero -->
+  <section class="hero-section">
+    <h1>About Our Interview System</h1>
+    <p>A Smart and Fair Facial Recognition Interview System designed to evaluate candidates ethically, securely, and transparently.</p>
+  </section>
+
+  <!-- 🧭 Mission -->
+  <section class="about-section">
+    <h2>Our Mission</h2>
+    <p>Our mission is to revolutionize virtual interviews using advanced <b>AI-driven facial recognition</b> and <b>behavioral analysis</b>. This system ensures fairness, privacy, and transparency by monitoring engagement, attention, and emotional response in real time — all while maintaining data security and bias-free evaluation.</p>
+
+    <h2>Our Project</h2>
+    <p>The <b>Facial Recognition Interview System</b> is built on <b>Federated Learning</b> principles that prevent central data misuse. It evaluates user engagement, verifies identity, and provides <b>Explainable AI (XAI)</b> insights through Grad-CAM visualizations — helping organizations conduct ethical and data-secure interviews.</p>
+  </section>
+
+  <!-- 👥 Team -->
+  <section class="team-section">
+    <h2>Meet Our Team</h2>
+    <div class="team-grid">
+      <div class="team-member">
+        <h3>Homil Modi</h3>
+        <p>Project Leader & AI Developer</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
         </div>
-    </header>
-
-    <main class="main-content">
-        <!-- About The Aegis Project Section -->
-        <section id="about-us" class="about-section">
-            <div class="header-image-container">
-                <img src="https://via.placeholder.com/1920x400/050505/A0A0A0?text=Team+Photo" alt="Team Photo" class="header-image">
-            </div>
-            <div class="container about-content-section">
-                <h1>About The Aegis Project</h1>
-                <h3>Our Mission</h3>
-                <p>To build a future where facial recognition technology is safe, fair, and accountable for all. Our mission is to develop and deploy cutting-edge AI solutions that uphold privacy, eliminate bias, and empower users with full transparency and control over their data.</p>
-                <h3>Why "Aegis"?</h3>
-                <p>In mythology, the Aegis was the shield of the gods, a symbol of divine protection. We chose this name because Aegis is designed to be a protective framework, shielding individuals from the potential misuse of facial recognition technology while fostering trust and security in its application.</p>
-            </div>
-        </section>
-
-        <!-- Meet the Team Section -->
-        <section id="team" class="team-section">
-            <div class="container">
-                <h2>Meet the Team</h2>
-                <div class="team-cards">
-                    <article class="team-member">
-                        <img src="https://via.placeholder.com/150x150/0F0F0F/A0A0A0?text=John+Doe" alt="John Doe" class="member-photo">
-                        <h4>John Doe</h4>
-                        <p class="title">CEO & Lead AI Ethicist</p>
-                        <div class="social-links">
-                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </article>
-                    <article class="team-member">
-                        <img src="https://via.placeholder.com/150x150/0F0F0F/A0A0A0?text=Jane+Smith" alt="Jane Smith" class="member-photo">
-                        <h4>Jane Smith</h4>
-                        <p class="title">Chief Technology Officer</p>
-                        <div class="social-links">
-                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </article>
-                    <article class="team-member">
-                        <img src="https://via.placeholder.com/150x150/0F0F0F/A0A0A0?text=Alex+Chen" alt="Alex Chen" class="member-photo">
-                        <h4>Alex Chen</h4>
-                        <p class="title">Head of Research</p>
-                        <div class="social-links">
-                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </article>
-                    <article class="team-member">
-                        <img src="https://via.placeholder.com/150x150/0F0F0F/A0A0A0?text=Maria+Garcia" alt="Maria Garcia" class="member-photo">
-                        <h4>Maria Garcia</h4>
-                        <p class="title">Privacy & Compliance Lead</p>
-                        <div class="social-links">
-                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="site-footer">
-        <div class="container footer-content">
-            <p>&copy; 2025 The Aegis Project</p>
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="#privacy">Privacy Policy</a></li>
-                    <li><a href="#linkedin-footer">LinkedIn</a></li>
-                    <li><a href="#twitter-footer">Twitter/X</a></li>
-                    <li><a href="#contact-footer">Contact</a></li>
-                </ul>
-            </nav>
+      </div>
+      <div class="team-member">
+        <h3>Het Gandhi</h3>
+        <p>Frontend Developer</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
         </div>
-    </footer>
+      </div>
+      <div class="team-member">
+        <h3>Komil Sharda</h3>
+        <p>Research Analyst</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+      <div class="team-member">
+        <h3>Hitarth Modi</h3>
+        <p>Backend Engineer</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script src="script.js"></script>
+  <!-- 🦶 Footer -->
+  <footer>
+    <p>© 2025 Facial Recognition Interview System — All Rights Reserved</p>
+    <div>
+      <a href="#">Privacy Policy</a> |
+      <a href="#">LinkedIn</a> |
+      <a href="#">GitHub</a> |
+      <a href="#">Contact</a>
+    </div>
+  </footer>
 </body>
 </html>
