--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,169 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegis: Engineering Trust in Facial Recognition</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Facial Recognition Interview System</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <!-- ✅ Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    /* 🌐 Global Theme */
+    body {
+      background: linear-gradient(to bottom, #010a13, #000);
+      color: #dfefff;
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      scroll-behavior: smooth;
+    }
+
+    /* ✅ Fixed Glowing Navbar */
+    .site-header {
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      background: rgba(0, 0, 0, 0.9);
+      border-bottom: 1px solid rgba(0, 191, 255, 0.25);
+      box-shadow: 0 0 15px rgba(0, 191, 255, 0.3);
+      height: 75px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      backdrop-filter: blur(6px);
+    }
+
+    .main-nav ul {
+      list-style: none;
+      display: flex;
+      gap: 40px;
+      margin: 0;
+      padding: 0;
+    }
+
+    .main-nav a {
+      color: #00bfff;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 1.05em;
+      letter-spacing: 0.6px;
+      position: relative;
+      padding: 8px 0;
+      transition: all 0.3s ease;
+    }
+
+    .main-nav a::after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 2px;
+      left: 50%;
+      bottom: 0;
+      background: #00bfff;
+      transform: translateX(-50%);
+      box-shadow: 0 0 6px rgba(0,191,255,0.7);
+      transition: all 0.3s ease;
+    }
+
+    .main-nav a:hover::after {
+      width: 60%;
+    }
+
+    .main-nav a:hover {
+      color: #b8dfff;
+      text-shadow: 0 0 10px rgba(0,191,255,0.8);
+    }
+
+    /* ✅ Hero Section */
+    .hero-section {
+      text-align: center;
+      padding: 120px 20px;
+      background: radial-gradient(circle at top, #02131f 0%, #000 100%);
+    }
+
+    .hero-section h1 {
+      font-size: 2.8em;
+      font-weight: 800;
+      color: #00bfff;
+      text-transform: uppercase;
+      text-shadow: 0 0 15px rgba(0,191,255,0.6);
+      margin-bottom: 20px;
+    }
+
+    .hero-section p {
+      max-width: 800px;
+      margin: 0 auto;
+      color: #b8dfff;
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+
+    .hero-buttons {
+      margin-top: 35px;
+    }
+
+    .button-primary,
+    .button-secondary {
+      padding: 10px 25px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      margin: 10px;
+      transition: 0.3s;
+    }
+
+    .button-primary {
+      background: #00bfff;
+      color: #000;
+      box-shadow: 0 0 12px rgba(0,191,255,0.5);
+    }
+
+    .button-primary:hover {
+      background: #00a6e6;
+      box-shadow: 0 0 18px rgba(0,191,255,0.8);
+    }
+
+    .button-secondary {
+      background: transparent;
+      border: 2px solid #00bfff;
+      color: #00bfff;
+    }
+
+    .button-secondary:hover {
+      background: rgba(0,191,255,0.1);
+      box-shadow: 0 0 18px rgba(0,191,255,0.6);
+    }
+
+    section h2 {
+      font-size: 2.2em;
+      font-weight: 700;
+      color: #00bfff;
+      text-transform: uppercase;
+      text-shadow: 0 0 12px rgba(0,191,255,0.7);
+      margin-bottom: 25px;
+    }
+
+    footer {
+      background: #000;
+      border-top: 1px solid rgba(0,191,255,0.2);
+      text-align: center;
+      padding: 20px;
+      color: #00bfff;
+    }
+  </style>
 </head>
-<body id="home">
-    <!-- ✅ Header -->
-    <header class="site-header">
-        <div class="container header-content">
-        <!--           
-            <a href="index.html" class="logo">
-                <img src="https://via.placeholder.com/150x50/0A0A0A/FFFFFF?text=AEGIS+LOGO" alt="Aegis Logo">
-            </a> 
-        -->
-            <a href="index.html" class="logo">
-                <img src="https://via.placeholder.com/150x50/0A0A0A/FFFFFF?text=AEGIS+LOGO" alt="Aegis Logo">
-            </a>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#how-it-works">How It Works</a></li>
-                    <li><a href="#research">Research</a></li>
-                    <li><a href="#demo-section">Demo</a></li>
-                    <li><a href="#evaluation-section">Evaluation</a></li>
-                    <li><a href="#xai-section">XAI</a></li> <!-- ✅ Link scrolls to XAI section -->
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="register.html">Interview</a></li>
 
+<body>
+  <!-- ✅ Header -->
+  <header class="site-header">
+    <nav class="main-nav">
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#key-features">Key Features</a></li>
+        <li><a href="#research">Research</a></li>
+        <li><a href="#demo-section">Demo</a></li>
+        <li><a href="#xai-section">XAI</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="register.html">Interview</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <!-- ✅ Hero Section -->
+  <section class="hero-section">
+    <h1>Facial Recognition Interview System</h1>
+    <p>
+      The Facial Recognition Interview System leverages AI to evaluate candidates with fairness,
+      accuracy, and transparency — ensuring ethical, bias-free, and secure virtual interviews for
+      modern recruitment.
+    </p>
+    <div class="hero-buttons">
+      <a href="#whitepaper" class="button-primary">Read The Whitepaper</a>
+      <a href="#demo-section" class="button-secondary">View The Demo</a>
+    </div>
+  </section>
 
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <!-- ✅ Key Features -->
+  <section id="key-features" style="padding: 80px 0; background: linear-gradient(to bottom, #010a13, #000); text-align: center;">
+    <h2>Key Features</h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; max-width: 1000px; margin: 0 auto;">
+      <article style="background: rgba(255,255,255,0.05); border: 1px solid rgba(0,191,255,0.2); border-radius: 15px; padding: 25px; box-shadow: 0 0 15px rgba(0,191,255,0.15);">
+        <i class="fas fa-brain" style="font-size: 2em; color: #00bfff;"></i>
+        <h3 style="color: #00bfff; margin: 15px 0;">AI-Powered Evaluation</h3>
+        <p>Analyzes facial expressions and engagement using deep learning in real time.</p>
+      </article>
+      <article style="background: rgba(255,255,255,0.05); border: 1px solid rgba(0,191,255,0.2); border-radius: 15px; padding: 25px;">
+        <i class="fas fa-balance-scale" style="font-size: 2em; color: #00bfff;"></i>
+        <h3 style="color: #00bfff; margin: 15px 0;">Bias-Free Assessment</h3>
+        <p>Ensures ethical, unbiased evaluations using fairness-aware models.</p>
+      </article>
+      <article style="background: rgba(255,255,255,0.05); border: 1px solid rgba(0,191,255,0.2); border-radius: 15px; padding: 25px;">
+        <i class="fas fa-lock" style="font-size: 2em; color: #00bfff;"></i>
+        <h3 style="color: #00bfff; margin: 15px 0;">Federated Privacy</h3>
+        <p>Uses Federated Learning — keeping user data private and secure locally.</p>
+      </article>
+    </div>
+  </section>
 
-    <!-- ✅ Main Content -->0
-    <!-- ✅ Main Content -->
-    <main class="main-content">
-        <!-- Hero Section -->
-        <section class="hero-section homepage-hero">
-            <div class="hero-overlay homepage-hero-overlay">
-                <div class="container hero-content">
-                    <h1 class="hero-title">Aegis: Engineering Trust in Facial Recognition.</h1>
-                    <p class="hero-description">
-                        Aegis is a pioneering framework that builds fairness, security, and transparency into facial recognition technology, ensuring ethical and responsible deployment for a safer future.
-                    </p>
-                    <div class="hero-buttons">
-                        <a href="#whitepaper" class="button button-primary">Read The Whitepaper</a>
-                        <a href="#demo-section" class="button button-secondary">View The Demo</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <!-- ✅ Research Dashboard -->
+  <section id="research" style="padding: 80px 0; background: linear-gradient(to bottom, #010a13, #000); text-align: center;">
+    <h2>Research Dashboard</h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; max-width: 1100px; margin: 0 auto;">
+      <div style="background: rgba(255,255,255,0.05); border: 1px solid rgba(0,191,255,0.2); border-radius: 12px; padding: 25px;">
+        <h3 style="color:#00bfff;">Fairness Across Groups</h3>
+        <canvas id="fairnessChart"></canvas>
+      </div>
+      <div style="background: rgba(255,255,255,0.05); border: 1px solid rgba(0,191,255,0.2); border-radius: 12px; padding: 25px;">
+        <h3 style="color:#00bfff;">Adversarial Robustness</h3>
+        <canvas id="robustnessChart"></canvas>
+      </div>
+      <div style="background: rgba(255,255,255,0.05); border: 1px solid rgba(0,191,255,0.2); border-radius: 12px; padding: 25px;">
+        <h3 style="color:#00bfff;">Overall Performance</h3>
+        <canvas id="performanceChart"></canvas>
+      </div>
+    </div>
+  </section>
 
-        <!-- Key Features Section -->
-        <section id="how-it-works" class="features-section">
-            <div class="container">
-                <h2>Key Features</h2>
-                <div class="features-grid">
-                    <article class="feature-card">
-                        <i class="fas fa-shield-alt"></i>
-                        <h3>Robust Performance</h3>
-                        <p>Our algorithms are designed for high accuracy across diverse demographics and challenging conditions, minimizing bias and maximizing reliability.</p>
-                    </article>
-                    <article class="feature-card">
-                        <i class="fas fa-network-wired"></i>
-                        <h3>Federated Learning</h3>
-                        <p>Aegis leverages federated learning to train models on decentralized data, ensuring privacy by keeping sensitive information on-device.</p>
-                    </article>
-                    <article class="feature-card">
-                        <i class="fas fa-lightbulb"></i>
-                        <h3>Explainable AI</h3>
-                        <p>We provide clear insights into model decisions, enhancing transparency and building trust through interpretable outcomes.</p>
-                    </article>
-                    <article class="feature-card">
-                        <i class="fas fa-lock"></i>
-                        <h3>Secure by Design</h3>
-                        <p>Built with privacy and security at its core, Aegis employs advanced cryptographic techniques to protect data integrity.</p>
-                    </article>
-                </div>
-            </div>
-        </section>
+  <!-- ✅ Live Demo -->
+  <section id="demo-section" style="padding: 80px 0; background: linear-gradient(to bottom, #010a13, #000); text-align: center;">
+    <h2>Live Demo</h2>
+    <p style="max-width: 700px; margin: 0 auto 40px; color: #b8dfff;">Upload an image and our federated model will predict in real time.</p>
+    <div class="upload-box" style="display:flex;flex-direction:column;align-items:center;gap:15px;">
+      <input type="file" id="fileInput" accept="image/*" style="margin-bottom: 10px;">
+      <button onclick="uploadImage()" class="button-primary">Predict</button>
+    </div>
+    <div id="result" style="margin-top: 30px;"></div>
+  </section>
 
-        <!-- Live Demo Section -->
-        <section id="demo-section" class="demo-section">
-            <div class="container demo-container">
-                <h2>Live Demo</h2>
-                <p>Upload an image and our federated model will predict in real-time:</p>
-                <div class="upload-box">
-                    <input type="file" id="fileInput" accept="image/*">
-                    <button onclick="uploadImage()" class="button button-primary">Predict</button>
-                </div>
-                <div id="result"></div>
-            </div>
-        </section>
+  <!-- ✅ Explainability (XAI) -->
+  <section id="xai-section" style="padding: 80px 0; background: linear-gradient(to bottom, #010a13, #000); text-align: center;">
+    <h2>Explainability (XAI)</h2>
+    <p style="max-width: 700px; margin: 0 auto 40px; color: #b8dfff;">
+      Upload an image and see how the model makes its decision using 
+      <b style="color: #00bfff;">Grad-CAM</b> heatmaps for visual explanations of neural network reasoning.
+    </p>
+    <div class="upload-box" style="display:flex;flex-direction:column;align-items:center;gap:15px;">
+      <input type="file" id="xaiFile" accept="image/*" style="margin-bottom: 10px;">
+      <button onclick="uploadForExplain()" class="button-primary">Generate Explanation</button>
+    </div>
+    <div id="xaiResult" style="margin-top: 30px;"></div>
+  </section>
 
-        <!-- ✅ Evaluation Results Section -->
-        <section id="evaluation-section" class="evaluation-section">
-            <div class="container evaluation-container">
-                <h2>DASHBOARD</h2>
-                <h2>Model Evaluation Results</h2>
-                <p>Fairness and robustness metrics from federated training:</p>
+  <!-- ✅ Blog -->
+  <section id="blog" style="padding: 80px 0; background: linear-gradient(to bottom, #010a13, #000); text-align: center;">
+    <h2>From the Blog</h2>
+    <ul style="list-style:none; color:#b8dfff; padding:0; max-width:700px; margin:0 auto; text-align:left;">
+      <li><a href="#" style="color:#00bfff;">The Future of Facial Recognition: Ethical AI at the Forefront</a> — <span style="color:#9ad0ff;">July 10, 2025</span></li>
+      <li><a href="#" style="color:#00bfff;">Decentralizing AI: How Federated Learning Protects Privacy</a> — <span style="color:#9ad0ff;">June 25, 2025</span></li>
+      <li><a href="#" style="color:#00bfff;">Understanding AI Decisions: The Importance of Explainability</a> — <span style="color:#9ad0ff;">June 01, 2025</span></li>
+    </ul>
+  </section>
 
-                <div class="chart-box">
-                    <h3>Fairness Across Groups</h3>
-                    <canvas id="fairnessChart"></canvas>
-                </div>
+  <!-- ✅ Footer -->
+  <footer>
+    <p>&copy; 2025 Facial Recognition Interview System — All Rights Reserved</p>
+  </footer>
 
-                <div class="chart-box">
-                    <h3>Adversarial Robustness</h3>
-                    <canvas id="robustnessChart"></canvas>
-                </div>
-
-                <div class="chart-box">
-                    <h3>Overall Performance</h3>
-                    <canvas id="performanceChart"></canvas>
-                </div>
-            </div>
-        </section>
-
-        <!-- ✅ Explainability (XAI) Section -->
-        <section id="xai-section" class="xai-section">
-            <div class="container">
-                <h2>Explainability (XAI)</h2>
-                <p>Upload an image and see how the model makes its decision using <b>Grad-CAM</b> heatmaps.</p>
-
-                <div class="upload-box">
-                    <input type="file" id="xaiFile" accept="image/*">
-                    <button onclick="uploadForExplain()" class="button button-primary">Generate Explanation</button>
-                </div>
-
-                <div id="xaiResult" class="result-box"></div>
-            </div>
-        </section>
-
-        <!-- Blog Section -->
-        <section id="blog" class="blog-section">
-            <div class="container">
-                <h3>From the Blog</h3>
-                <ul class="blog-posts">
-                    <li><a href="#">The Future of Facial Recognition: Ethical AI at the Forefront</a> <span class="date">July 10, 2025</span></li>
-                    <li><a href="#">Decentralizing AI: How Federated Learning Protects Your Privacy</a> <span class="date">June 25, 2025</span></li>
-                    <li><a href="#">Understanding AI Decisions: The Importance of Explainability</a> <span class="date">June 01, 2025</span></li>
-                    <li><a href="#">Beyond Identification: New Applications of Facial Recognition</a> <span class="date">May 15, 2025</span></li>
-                </ul>
-            </div>
-        </section>
-    </main>
-
-    <!-- ✅ Footer -->
-    <footer class="site-footer">
-        <div class="container footer-content">
-            <p>&copy; 2025 The Aegis Project</p>
-        </div>
-    </footer>
-
-    <!-- ✅ JS -->
-    <script src="script.js"></script>
+  <!-- ✅ CRITICAL FIX: Load script.js -->
+  <script src="script.js"></script>
 </body>
 </html>
