--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Aegis</title>
+    
     <!-- Link to the CSS file -->
     <link rel="stylesheet" href="login.css">
-    <!-- Font Awesome for icons and Inter/Outfit for typography -->
+    
+    <!-- Font Awesome + Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -25,9 +27,15 @@
                 </div>
                 <button type="submit" class="button button-primary">Sign In</button>
             </form>
+
             <a href="#" class="forgot-password">Forgot Password?</a>
-            <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+            <p class="signup-link">
+                Don't have an account? <a href="#">Sign up</a>
+            </p>
         </div>
     </main>
+
+    <!-- ✅ Add your JS file here -->
+    <script src="login.js"></script>
 </body>
 </html>
